--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,44 +3,41 @@
 version: 2.1
 orbs:
   ruby: circleci/ruby@0.1.2 
-  heroku: circleci/heroku@1.2.6
+  # aws-elastic-beanstalk: circleci/aws-elastic-beanstalk@2.0.1
 
 jobs:
   build:
-    working_directory: ~/little-discount-shop
+    working_directory: ~/be
     docker:
-      - image: cimg/ruby:3.1.2-node
+      - image: cimg/ruby:2.7.4-node
         environment:
           PGHOST: localhost
-          PGUSER: little-discount-shop
+          PGUSER: user
           RAILS_ENV: test
       - image: postgres:14.4
         environment:
-          POSTGRES_USER: little-discount-shop
-          POSTGRES_DB: little_discount_shop_test
+          POSTGRES_USER: user
+          POSTGRES_DB: be_test
           POSTGRES_PASSWORD:
     steps:
       - checkout
       - run:
-          name: little-discount-shop
+          name: be
           command: bundle -v
       - ruby/bundle-install
 
       - checkout
       - run: bundle install --path vendor/bundle
       - run: bundle exec rspec
-  deploy:
-    executor: heroku/default
-    steps:
-      - checkout
-      - heroku/install
-      - run:
-          command: >
-            echo "The command above installs Heroku, the command below deploys.
-            What you do inbetween is up to you!"
-      - heroku/deploy-via-git:
-            requires:
-            - build # only run deploy-via-git job if the build job has completed
-            filters:
-            branches:
-                only: main
+  # deploy:
+  #   executor: aws-elastic-beanstalk/default
+  #   steps:
+  #     - eb/deploy:
+  #         context: aws-creds
+  #         environment-name: wetective-env
+  #         filters:
+  #           branches:
+  #             only:
+  #               - main
+  #         requires:
+  #           - build
