--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 /coverage
+# Ignore application configuration
+/config/application.yml
