Update circle ci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,7 +78,9 @@ jobs:
 workflows:
   build_test_deploy:
     jobs:
-      - build
+      - build:
+          context:
+            - wetective-be-deploy
       - test
       - deploy:
           requires:
