Update circle ci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,6 +83,8 @@ workflows:
             - wetective-be-deploy
       - test
       - deploy:
+          context:
+            - wetective-be-deploy
           requires:
             - test
           filters:
