Update circle ci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,7 +78,9 @@ workflows:
       - build:
           context:
             - wetective-be-deploy
-      - test
+      - test:
+          context:
+            - wetective-be-deploy
       - deploy:
           context:
             - wetective-be-deploy
