--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,10 @@ commands:
     steps:
       - run:
           name: Deploy to fly.io
-          command: fly deploy
+          command: |
+            "/home/circleci/.fly/bin/flyctl" --app ${FLY_APP_NAME} deploy \
+              --access-token "${FLY_ACCESS_TOKEN}" \
+              --local-only \
   install_dependencies:
     steps:
       - checkout
