--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,8 +35,8 @@ commands:
       - run:
           name: Deploy to fly.io
           command: |
-            "/home/circleci/.fly/bin/flyctl" --app $FLY_APP_NAME deploy \
-              --access-token $FLY_ACCESS_TOKEN \
+            "/home/circleci/.fly/bin/flyctl" --app ${FLY_APP_NAME} deploy \
+              --access-token "$FLY_ACCESS_TOKEN}" \
               --local-only \
   install_dependencies:
     steps:
