--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,10 +34,7 @@ commands:
     steps:
       - run:
           name: Deploy to fly.io
-          command: |
-            "/home/circleci/.fly/bin/flyctl" --app ${FLY_APP_NAME} deploy \
-              --access-token "$FLY_ACCESS_TOKEN}" \
-              --local-only \
+          command: flyctl deploy
   install_dependencies:
     steps:
       - checkout
