--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ commands:
     steps:
       - run:
           name: Deploy to fly.io
-          command: flyctl deploy
+          command: flyctl deploy --remote-only
   install_dependencies:
     steps:
       - checkout
